--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "hardhat": "^2.6.7"
+    "hardhat": "^2.6.8"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
+    "ethers": "^5.5.1",
+    "hardhat-ethers": "^1.0.1"
   }
 }
